--- a/index.html
+++ b/index.html
@@ -610,9 +610,9 @@
             <div class="tools-grid">
                 <div class="tool-card">
                     <div class="tool-icon"><i class="fas fa-video"></i></div>
-                    <h3 class="tool-name">Video Converter</h3>
-                    <p class="tool-description">Convert videos to different formats (browser-limited)</p>
-                    <button class="use-tool-btn">Use Tool</button>
+                    <h3>Video Converter</h3>
+                    <p>Convert videos to different formats (browser-limited)</p>
+                    <a href="image-converter.html" class="tool-button">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
