--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+vi<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -436,7 +436,7 @@
                 <button class="cta-btn">Document Tools</button>
                 <button class="cta-btn">Image Tools</button>
                 <button class="cta-btn">Text Tools</button>
-                <button class="cta-btn">Audio/Video Tools</button>
+                <button class="cta-btn">Audio/ Tools</button>
                 <button class="cta-btn">Web Tools</button>
                 <button class="cta-btn">Calculator Tools</button>
                 <button class="cta-btn">Utility Tools</button>
@@ -610,9 +610,9 @@
             <div class="tools-grid">
                 <div class="tool-card">
                     <div class="tool-icon"><i class="fas fa-video"></i></div>
-                    <h3>Video Converter</h3>
-                    <p>Convert videos to different formats (browser-limited)</p>
-                    <a href="image-converter.html" class="tool-button">Use Tool</a>
+                    <h3 class="tool-name">Video Converter</h3>
+                    <p class="tool-description">Convert videos to different formats (browser-limited)</p>
+                    <button class="use-tool-btn">Use Tool</button>
                 </div>
                 
                 <div class="tool-card">
