--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
                     <h3 class="tool-name">Image Converter</h3>
                     <p class="tool-description">Convert images between different formats</p>
                     <button class="use-tool-btn">Use Tool</button>
+                    <a href="Image-Converter.html" class="tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
