--- a/index.html
+++ b/index.html
@@ -547,8 +547,8 @@
                 <div class="tool-card">
                     <i class="fas fa-exchange-alt tool-icon"></i>
                     <h4 class="tool-name">Image Converter</h4>
-                    <p class="tool-desc">Convert images between different formats</p>
-                    <a href="image-converter.html" class="tool-btn">Use Tool</a>
+                    <p class="tool-desc">Convert between JPG, PNG, GIF, WEBP and more formats</p>
+                    <a href="#" class="tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
