--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                     <i class="fas fa-exchange-alt tool-icon"></i>
                     <h4 class="tool-name">Image Converter</h4>
                     <p class="tool-desc">Convert between JPG, PNG, GIF, WEBP and more formats</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="image-converter.html" class="tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
