--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     <i class="fas fa-compress-arrows-alt tool-icon"></i>
                     <h4 class="tool-name">Image Compressor</h4>
                     <p class="tool-desc">Reduce image file size while maintaining quality</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="image-compressor.html" class="tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
