--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     <i class="fas fa-expand-arrows-alt tool-icon"></i>
                     <h4 class="tool-name">Image Resizer</h4>
                     <p class="tool-desc">Resize images to specific dimensions</p>
-                    <a href="#" class="tool-btn">Use Tool</a>
+                    <a href="image-resizer.html" class="tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
