--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     <div class="tool-icon">🖼️</div>
                     <h3>Image Converter</h3>
                     <p>Convert images between JPG, PNG, GIF, WebP and more</p>
-                    <a href="#" class="use-tool-btn">Use Tool</a>
+                    <a href="image-converter.html" class="use-tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
