--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                 <div class="tool-card">
                     <div class="tool-icon">🖼️</div>
                     <h3>Image Converter</h3>
-                    <p>Convert images between JPG, PNG, GIF, WebP and more</p>
+                    <p>Convert between JPG, PNG, GIF, WEBP and more formats</p>
                     <a href="image-converter.html" class="use-tool-btn">Use Tool</a>
                 </div>
                 
