--- a/image-converter.html
+++ b/image-converter.html
@@ -7,7 +7,9 @@
   <style>
     body {
       background-color: #ffffff;
-      color: #2563eb;
+      primary: #8B5FBF
+      primary-dark: #6A4A9C;
+      primary-light: #A78BC9;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
