--- a/image-converter.html
+++ b/image-converter.html
@@ -6,10 +6,8 @@
   <title>Image Converter Tool</title>
   <style>
     body {
-      background-color: #ffffff;
-      primary: #8B5FBF
-      primary-dark: #6A4A9C;
-      primary-light: #A78BC9;
+      background-color: #7C3AED;
+      color: #FFFFFF;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
@@ -25,7 +23,7 @@
       max-width: 500px;
       width: 100%;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      background-color: #ffffff;
+      background-color: #7C3AED;
     }
     input, select, button {
       width: 100%;
@@ -34,8 +32,8 @@
       border: 2px solid #2563eb;
       border-radius: 8px;
       font-size: 1rem;
-      color: #2563eb;
-      background-color: #ffffff;
+      color: #FFFFFF;
+      background-color: #7C3AED;
     }
     button {
       background-color: #2563eb;
