--- a/image-converter.html
+++ b/image-converter.html
@@ -53,7 +53,7 @@
       margin-top: 1rem;
       padding: 0.5rem 1rem;
       background-color: #2563eb;
-      color: white;
+      color: purple;
       text-align: center;
       border-radius: 8px;
       text-decoration: none;
