--- a/image-converter.html
+++ b/image-converter.html
@@ -32,7 +32,7 @@
       border: 2px solid #2563eb;
       border-radius: 8px;
       font-size: 1rem;
-      color: #FFFFFF;
+      color: purple;
       background-color: #7C3AED;
     }
     button {
@@ -53,7 +53,7 @@
       margin-top: 1rem;
       padding: 0.5rem 1rem;
       background-color: #2563eb;
-      color: purple;
+      color: white;
       text-align: center;
       border-radius: 8px;
       text-decoration: none;
