--- a/image-converter.html
+++ b/image-converter.html
@@ -6,8 +6,8 @@
   <title>Image Converter Tool</title>
   <style>
     body {
-      background-color: #7C3AED;
-      color: #FFFFFF;
+      background-color: #ffffff;
+      color: #2563eb;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
@@ -23,7 +23,7 @@
       max-width: 500px;
       width: 100%;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      background-color: #7C3AED;
+      background-color: #ffffff;
     }
     input, select, button {
       width: 100%;
