--- a/image-converter.html
+++ b/image-converter.html
@@ -32,8 +32,8 @@
       border: 2px solid #2563eb;
       border-radius: 8px;
       font-size: 1rem;
-      color: purple;
-      background-color: #7C3AED;
+      color: #7F00FF;
+      background-color: #ffffff;
     }
     button {
       background-color: #2563eb;
