--- a/image-converter.html
+++ b/image-converter.html
@@ -32,7 +32,7 @@
       border: 2px solid #2563eb;
       border-radius: 8px;
       font-size: 1rem;
-      color: #7F00FF;
+      color: Royal Purple;
       background-color: #ffffff;
     }
     button {
@@ -41,7 +41,7 @@
       cursor: pointer;
     }
     button:hover {
-      background-color: #1e40af;
+      background-color: #7F00FF;
     }
     img {
       max-width: 100%;
@@ -59,7 +59,7 @@
       text-decoration: none;
     }
     .download-btn:hover {
-      background-color: #1e40af;
+      background-color: #7F00FF;
     }
   </style>
 </head>
