--- a/image-converter.html
+++ b/image-converter.html
@@ -32,11 +32,11 @@
       border: 2px solid #2563eb;
       border-radius: 8px;
       font-size: 1rem;
-      color: Royal Purple;
+      color: Purple;
       background-color: #ffffff;
     }
     button {
-      background-color: #2563eb;
+      background-color: #7F00FF;
       color: white;
       cursor: pointer;
     }
@@ -52,7 +52,7 @@
       display: inline-block;
       margin-top: 1rem;
       padding: 0.5rem 1rem;
-      background-color: #2563eb;
+      background-color: #7F00FF;
       color: white;
       text-align: center;
       border-radius: 8px;
