--- a/image-converter.html
+++ b/image-converter.html
@@ -64,7 +64,19 @@
   </style>
 </head>
 <body>
-    
+  <div class="container">
+    <h1>Image Converter Tool</h1>
+    <input type="file" id="imageInput" accept="image/*" />
+    <select id="formatSelect">
+      <option value="png">PNG</option>
+      <option value="jpeg">JPG</option>
+      <option value="gif">GIF</option>
+      <option value="webp">WebP</option>
+    </select>
+    <button onclick="convertImage()">Convert Image</button>
+
+    <div id="previewContainer"></div>
+  </div>  
   <script>
     let originalFile;
 
