--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                     <div class="tool-icon">💧</div>
                     <h3>Image Watermarker</h3>
                     <p>Add text or image watermarks to protect your photos</p>
-                    <a href="#" class="use-tool-btn">Use Tool</a>
+                    <a href="image-watermarker.html" class="use-tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
