--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                     <div class="tool-icon">📄</div>
                     <h3>PDF Compressor</h3>
                     <p>Reduce PDF file size while maintaining quality</p>
-                    <a href="Pdf-compressor.html" class="use-tool-btn">Use Tool</a>
+                    <a href="pdf-compressor.html" class="use-tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
