--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
                 <nav>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="tools.html">Tools</a></li>
+                        <li><a href="#about.html">About Us</a></li>
+                        <li><a href="#tools.html">Tools</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
