--- a/image-converter.html
+++ b/image-converter.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+F<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Image Converter Tool</title>
   <style>
-    body {
+    body {F
       background-color: #ffffff;
       color: #2563eb;
       font-family: Arial, sans-serif;
-      display: flex;
+      display: flex;F
       justify-content: center;
       align-items: center;
       flex-direction: column;
