--- a/image-watermarker.html
+++ b/image-watermarker.html
@@ -699,7 +699,7 @@
         </div>
         
         <nav class="nav-index.html">
-            <a href="index.html">Home</a>
+            <a href="nav-index.html">Home</a>
             <a href="#" id="about-link">About Us</a>
             <a href="#" id="tools-link">Tools</a>
             <a href="#" id="contact-link">Contact</a>
