--- a/image-watermarker.html
+++ b/image-watermarker.html
@@ -886,7 +886,7 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="#" id="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#" id="footer-all-tools">All Tools</a></li>
                     <li><a href="#" id="footer-contact">Contact</a></li>
                     <li><a href="#" id="footer-privacy">Privacy Policy</a></li>
