--- a/image-watermarker.html
+++ b/image-watermarker.html
@@ -698,8 +698,8 @@
             </a>
         </div>
         
-        <nav class="nav-index.html">
-            <a href="nav-index.html">Home</a>
+        <nav class="nav-link">
+            <a href="index.html">Home</a>
             <a href="#" id="about-link">About Us</a>
             <a href="#" id="tools-link">Tools</a>
             <a href="#" id="contact-link">Contact</a>
