--- a/image-watermarker.html
+++ b/image-watermarker.html
@@ -699,7 +699,7 @@
         </div>
         
         <nav class="nav-link">
-            <a href="index.html">Home</a>
+            <a href="#" id="home-link">Home</a>
             <a href="#" id="about-link">About Us</a>
             <a href="#" id="tools-link">Tools</a>
             <a href="#" id="contact-link">Contact</a>
@@ -886,7 +886,7 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#" id="footer-home">Home</a></li>
                     <li><a href="#" id="footer-all-tools">All Tools</a></li>
                     <li><a href="#" id="footer-contact">Contact</a></li>
                     <li><a href="#" id="footer-privacy">Privacy Policy</a></li>
