--- a/pdf-compressor.html
+++ b/pdf-compressor.html
@@ -681,8 +681,8 @@
             
             <div class="footer-col">
                 <h3>Popular Categories</h3>
-                <ul class="footer-links">
-                    <li><a href="tools.html#pdf-tools">PDF Tools</a></li>
+                <ul class="footer-tools.html">
+                    <li><a href="pdf-tools.html">PDF Tools</a></li>
                     <li><a href="tools.html#image-tools">Image Tools</a></li>
                     <li><a href="tools.html#text-tools">Text Tools</a></li>
                     <li><a href="tools.html#audio-video-tools">Audio/Video Tools</a></li>
