--- a/pdf-compressor.html
+++ b/pdf-compressor.html
@@ -761,7 +761,7 @@
             
             <nav class="nav-center">
                 <a href="https://lollypopdf.github.io/LollyPoPdf" class="nav-link">Home</a>
-                <a href="https://lollypopdf.com/about" class="nav-link">About Us</a>
+                <a href="https://lollypopdf.github.io/LollyPoPdf/about" class="nav-link">About Us</a>
                 <a href="https://lollypopdf.com/tools" class="nav-link">Tools</a>
                 <a href="https://lollypopdf.com/contact" class="nav-link">Contact</a>
             </nav>
