--- a/pdf-compressor.html
+++ b/pdf-compressor.html
@@ -762,8 +762,8 @@
             <nav class="nav-center">
                 <a href="https://lollypopdf.github.io/LollyPoPdf" class="nav-link">Home</a>
                 <a href="https://lollypopdf.github.io/LollyPoPdf" class="nav-link">About Us</a>
-                <a href="https://lollypopdf.com/tools" class="nav-link">Tools</a>
-                <a href="https://lollypopdf.com/contact" class="nav-link">Contact</a>
+                <a href="https://lollypopdf.github.io/LollyPoPdf" class="nav-link">Tools</a>
+                <a href="https://lollypopdf.github.io/LollyPoPdf" class="nav-link">Contact</a>
             </nav>
             
             <div class="header-right">
@@ -918,7 +918,7 @@
             <div class="footer-column">
                 <h3>Popular Categories</h3>
                 <ul class="footer-links">
-                    <li><a href="https://lollypopdf.com/category/pdf-tools">PDF Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf/category/pdf-tools">PDF Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/image-tools">Image Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/text-tools">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/audio-video-tools">Audio/Video Tools</a></li>
@@ -932,7 +932,7 @@
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul class="footer-links">
-                    <li><a href="https://lollypopdf.com">Home</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf">Home</a></li>
                     <li><a href="https://lollypopdf.com/tools">All Tools</a></li>
                     <li><a href="https://lollypopdf.com/contact">Contact</a></li>
                     <li><a href="https://lollypopdf.com/privacy-policy">Privacy Policy</a></li>
