--- a/pdf-compressor.html
+++ b/pdf-compressor.html
@@ -918,7 +918,7 @@
             <div class="footer-column">
                 <h3>Popular Categories</h3>
                 <ul class="footer-links">
-                    <li><a href="https://lollypopdf.github.io/LollyPoPdf/category">PDF Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf">PDF Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/image-tools">Image Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/text-tools">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/audio-video-tools">Audio/Video Tools</a></li>
