--- a/pdf-compressor.html
+++ b/pdf-compressor.html
@@ -920,7 +920,7 @@
                 <ul class="footer-links">
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf">PDF Tools</a></li>
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf">Image Tools</a></li>
-                    <li><a href="https://lollypopdf.com/category/text-tools">Text Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf/category/text-tools">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/audio-video-tools">Audio/Video Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/web-developer-tools">Web/Developer Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/calculator-tools">Calculator Tools</a></li>
