--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                     <div class="tool-icon">🔗</div>
                     <h3>PDF Merger & Splitter</h3>
                     <p>Combine multiple PDFs or split a PDF into separate files</p>
-                    <a href="#" class="use-tool-btn">Use Tool</a>
+                    <a href="pdf-merger & splitter" class="use-tool-btn">Use Tool</a>
                 </div>
                 
                 <div class="tool-card">
