--- a/pdf-merger & splitter.html
+++ b/pdf-merger & splitter.html
@@ -835,8 +835,8 @@
             </a>
             
             <nav class="nav-center">
-                <a href="https://lollypopdf.com" class="nav-link">Home</a>
-                <a href="https://lollypopdf.com/about" class="nav-link">About Us</a>
+                <a href="https://lollypopdf.github.io/LollyPoPdf" class="nav-link">Home</a>
+                <a href="https://lollypopdf.github.io/LollyPoPdf" class="nav-link">About Us</a>
                 <a href="https://lollypopdf.com/tools" class="nav-link">Tools</a>
                 <a href="https://lollypopdf.com/contact" class="nav-link">Contact</a>
             </nav>
@@ -1022,7 +1022,7 @@
             <div class="footer-column">
                 <h3>Popular Categories</h3>
                 <ul class="footer-links">
-                    <li><a href="https://lollypopdf.com/category/pdf-tools">PDF Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf">PDF Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/image-tools">Image Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/text-tools">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/audio-video-tools">Audio/Video Tools</a></li>
