--- a/pdf-merger & splitter.html
+++ b/pdf-merger & splitter.html
@@ -1023,7 +1023,7 @@
                 <h3>Popular Categories</h3>
                 <ul class="footer-links">
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf">PDF Tools</a></li>
-                    <li><a href="https://lollypopdf.com/category/image-tools">Image Tools</a></li>
+                    <li><a href="https://lollypopdf.com/data-category">Image Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/text-tools">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/audio-video-tools">Audio/Video Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/web-developer-tools">Web/Developer Tools</a></li>
