--- a/image-converter.html
+++ b/image-converter.html
@@ -655,7 +655,7 @@
                 
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="tools.html">Tools</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -838,7 +838,7 @@
                 <div class="footer-categories">
                     <h3 class="footer-title">Popular Categories</h3>
                     <ul>
-                        <li><a href="pdf-tools.html">PDF Tools</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf">PDF Tools</a></li>
                         <li><a href="image-tools.html">Image Tools</a></li>
                         <li><a href="text-tools.html">Text Tools</a></li>
                         <li><a href="audio-video-tools.html">Audio/Video Tools</a></li>
@@ -852,7 +852,7 @@
                 <div class="footer-links">
                     <h3 class="footer-title">Quick Links</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf">Home</a></li>
                         <li><a href="tools.html">All Tools</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="privacy.html">Privacy Policy</a></li>
