--- a/image-converter.html
+++ b/image-converter.html
@@ -7,24 +7,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary: #8a2be2;
-            --primary-dark: #6a1cb0;
-            --secondary: #e2d2f9;
-            --light: #f8f5ff;
-            --dark: #333;
-            --gray: #777;
-            --white: #fff;
-            --shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            --transition: all 0.3s ease;
+            --primary: #8B5FBF;
+            --primary-dark: #6A4A9C;
+            --primary-light: #A78BC9;
+            --secondary: #F5F3FF;
+            --text: #333333;
+            --text-light: #666666;
+            --background: #FFFFFF;
+            --card-bg: #F9F9F9;
+            --shadow: rgba(139, 95, 191, 0.15);
+            --shadow-dark: rgba(139, 95, 191, 0.3);
         }
 
         .dark-mode {
-            --light: #1a1a2e;
-            --dark: #f0f0f0;
-            --gray: #b0b0b0;
-            --white: #16213e;
-            --shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            --primary: #9D6FCF;
+            --primary-dark: #7A4FB3;
+            --primary-light: #B28FDF;
+            --secondary: #1A1A2E;
+            --text: #E2E2E2;
+            --text-light: #B0B0B0;
+            --background: #121212;
+            --card-bg: #1E1E2E;
+            --shadow: rgba(157, 111, 207, 0.15);
+            --shadow-dark: rgba(157, 111, 207, 0.3);
         }
+
 
         * {
             margin: 0;
