--- a/image-converter.html
+++ b/image-converter.html
@@ -6,30 +6,27 @@
     <title>LollyPoPdf - Image Converter Tool</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        :root {
-            --primary: #8B5FBF;
-            --primary-dark: #6A4A9C;
-            --primary-light: #A78BC9;
-            --secondary: #F5F3FF;
-            --text: #333333;
-            --text-light: #666666;
-            --background: #FFFFFF;
-            --card-bg: #F9F9F9;
-            --shadow: rgba(139, 95, 191, 0.15);
-            --shadow-dark: rgba(139, 95, 191, 0.3);
+       :root {
+            --primary-color: #8a2be2;
+            --primary-light: #a855f7;
+            --primary-dark: #6a0dad;
+            --white: #ffffff;
+            --light-bg: #f8f9fa;
+            --dark-bg: #121212;
+            --dark-text: #e0e0e0;
+            --dark-card: #1e1e1e;
+            --gray: #6c757d;
+            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            --transition: all 0.3s ease;
         }
 
+
         .dark-mode {
-            --primary: #9D6FCF;
-            --primary-dark: #7A4FB3;
-            --primary-light: #B28FDF;
-            --secondary: #1A1A2E;
-            --text: #E2E2E2;
-            --text-light: #B0B0B0;
-            --background: #121212;
-            --card-bg: #1E1E2E;
-            --shadow: rgba(157, 111, 207, 0.15);
-            --shadow-dark: rgba(157, 111, 207, 0.3);
+            --light: #1a1a2e;
+            --dark: #f0f0f0;
+            --gray: #b0b0b0;
+            --white: #16213e;
+            --shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
 
