--- a/image-converter.html
+++ b/image-converter.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
        :root {
-            --primary-color: #8a2be2;
-            --primary-light: #a855f7;
-            --primary-dark: #6a0dad;
-            --white: #ffffff;
-            --light-bg: #f8f9fa;
-            --dark-bg: #121212;
-            --dark-text: #e0e0e0;
-            --dark-card: #1e1e1e;
-            --gray: #6c757d;
-            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            --primary: #8a2be2;
+            --primary-dark: #6a1cb0;
+            --secondary: #e2d2f9;
+            --light: #f8f5ff;
+            --dark: #333;
+            --gray: #777;
+            --white: #fff;
+            --shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             --transition: all 0.3s ease;
         }
 
