--- a/image-converter.html
+++ b/image-converter.html
@@ -839,7 +839,7 @@
                     <h3 class="footer-title">Popular Categories</h3>
                     <ul>
                         <li><a href="pdf-tools.html">PDF Tools</a></li>
-                        <li><a href="image-tools.html">Image Tools</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#image-tools">Image Tools</a></li>
                         <li><a href="text-tools.html">Text Tools</a></li>
                         <li><a href="audio-video-tools.html">Audio/Video Tools</a></li>
                         <li><a href="web-developer-tools.html">Web/Developer Tools</a></li>
