Update pdf-merger & splitter.html

--- a/pdf-merger & splitter.html
+++ b/pdf-merger & splitter.html
@@ -1022,9 +1022,9 @@
             <div class="footer-column">
                 <h3>Popular Categories</h3>
                 <ul class="footer-links">
-                    <li><a href="https://lollypopdf.github.io/LollyPoPdf">PDF Tools</a></li>
-                    <li><a href="https://lollypopdf.com/data-category">Image Tools</a></li>
-                    <li><a href="https://lollypopdf.com/category/text-tools">Text Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#pdf-tools">PDF Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#image-tools">Image Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#text-tools">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/audio-video-tools">Audio/Video Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/web-developer-tools">Web/Developer Tools</a></li>
                     <li><a href="https://lollypopdf.com/category/calculator-tools">Calculator Tools</a></li>
