--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
             </div>
             
             <div class="tool-categories">
-                <button class="category-btn active" data-category="document">Document Tools</button>
+                <button class="category-btn active" data-category="pdf">PDF Tools</button>
                 <button class="category-btn" data-category="image">Image Tools</button>
                 <button class="category-btn" data-category="text">Text Tools</button>
                 <button class="category-btn" data-category="audio">Audio/Video Tools</button>
@@ -870,7 +870,7 @@
         </div>
     </section>
 
-    <!-- Audio/Video Tools Section -->
+    <!-- Audio Video Tools Section -->
     <section class="tools-section" id="audio-tools">
         <div class="container">
             <div class="section-header">
@@ -921,7 +921,7 @@
     <section class="tools-section" id="web-tools">
         <div class="container">
             <div class="section-header">
-                <h2>🌐 Web/Developer Tools</h2>
+                <h2>🌐 WebDeveloper Tools</h2>
                 <p>Essential tools for web developers and designers</p>
             </div>
             
