--- a/image-compressor.html
+++ b/image-compressor.html
@@ -834,8 +834,8 @@
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#pdf-tools">PDF Tools</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#image-tools">Image Tools</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#text-tools">Text Tools</a></li>
-                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#audio/video-tools">Audio/Video Tools</a></li>
-                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#web/developer-tools">Web/Developer Tools</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#audio video-tools">Audio/Video Tools</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#webdeveloper-tools">Web/Developer Tools</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#calculator-tools">Calculator Tools</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#utility-tools">Utility Tools</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#color-tools">Color Tools</a></li>
