--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
         </div>
     </section>
 
-    <!-- Audio/Video Tools Section -->
+    <!-- Audio Video Tools Section -->
     <section class="tools-section" id="audio-tools">
         <div class="container">
             <div class="section-header">
@@ -921,7 +921,7 @@
     <section class="tools-section" id="web-tools">
         <div class="container">
             <div class="section-header">
-                <h2>🌐 Web/Developer Tools</h2>
+                <h2>🌐 WebDeveloper Tools</h2>
                 <p>Essential tools for web developers and designers</p>
             </div>
             
@@ -1212,8 +1212,8 @@
                         <li><a href="#document-tools">PDF Tools</a></li>
                         <li><a href="#image-tools">Image Tools</a></li>
                         <li><a href="#text-tools">Text Tools</a></li>
-                        <li><a href="#audio/video-tools">Audio Video Tools</a></li>
-                        <li><a href="#web/developer-tools">Web/Developer Tools</a></li>
+                        <li><a href="#audio video-tools">Audio Video Tools</a></li>
+                        <li><a href="#webdeveloper-tools">Web/Developer Tools</a></li>
                         <li><a href="#calculator-tools">Calculator Tools</a></li>
                         <li><a href="#utility-tools">Utility Tools</a></li>
                         <li><a href="#color-tools">Color Tools</a></li>
