--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
     <section class="tools-section" id="document-tools">
         <div class="container">
             <div class="section-header">
-                <h2>📄 Document Tools</h2>
+                <h2>📄 PDF Tools</h2>
                 <p>Powerful tools to manage, convert, and optimize your documents</p>
             </div>
             
@@ -874,7 +874,7 @@
     <section class="tools-section" id="audio-tools">
         <div class="container">
             <div class="section-header">
-                <h2>🎬 Audio/Video Tools</h2>
+                <h2>🎬 Audio Video Tools</h2>
                 <p>Convert, edit, and manage your media files</p>
             </div>
             
