--- a/index.html
+++ b/index.html
@@ -678,8 +678,8 @@
                 <button class="category-btn active" data-category="pdf">PDF Tools</button>
                 <button class="category-btn" data-category="image">Image Tools</button>
                 <button class="category-btn" data-category="text">Text Tools</button>
-                <button class="category-btn" data-category="audio">Audio/Video Tools</button>
-                <button class="category-btn" data-category="web">Web Tools</button>
+                <button class="category-btn" data-category="audio video">Audio Video Tools</button>
+                <button class="category-btn" data-category="webdeveloper">WebDeveloperTools</button>
                 <button class="category-btn" data-category="calculator">Calculator Tools</button>
                 <button class="category-btn" data-category="utility">Utility Tools</button>
                 <button class="category-btn" data-category="color">Color Tools</button>
@@ -917,7 +917,7 @@
         </div>
     </section>
 
-    <!-- Web Tools Section -->
+    <!-- WebDeveloper Tools Section -->
     <section class="tools-section" id="web-tools">
         <div class="container">
             <div class="section-header">
@@ -1213,7 +1213,7 @@
                         <li><a href="#image-tools">Image Tools</a></li>
                         <li><a href="#text-tools">Text Tools</a></li>
                         <li><a href="#audio video-tools">Audio Video Tools</a></li>
-                        <li><a href="#webdeveloper-tools">Web/Developer Tools</a></li>
+                        <li><a href="#webdeveloper-tools">WebDeveloper Tools</a></li>
                         <li><a href="#calculator-tools">Calculator Tools</a></li>
                         <li><a href="#utility-tools">Utility Tools</a></li>
                         <li><a href="#color-tools">Color Tools</a></li>
