--- a/index.html
+++ b/index.html
@@ -678,8 +678,8 @@
                 <button class="category-btn active" data-category="pdf">PDF Tools</button>
                 <button class="category-btn" data-category="image">Image Tools</button>
                 <button class="category-btn" data-category="text">Text Tools</button>
-                <button class="category-btn" data-category="audio video">Audio Video Tools</button>
-                <button class="category-btn" data-category="webdeveloper">WebDeveloperTools</button>
+                <button class="category-btn" data-category="audio">Audio/Video Tools</button>
+                <button class="category-btn" data-category="web/developer">Web/DeveloperTools</button>
                 <button class="category-btn" data-category="calculator">Calculator Tools</button>
                 <button class="category-btn" data-category="utility">Utility Tools</button>
                 <button class="category-btn" data-category="color">Color Tools</button>
@@ -870,11 +870,11 @@
         </div>
     </section>
 
-    <!-- Audio Video Tools Section -->
+    <!-- Audio/Video Tools Section -->
     <section class="tools-section" id="audio-tools">
         <div class="container">
             <div class="section-header">
-                <h2>🎬 Audio Video Tools</h2>
+                <h2>🎬 Audio/Video Tools</h2>
                 <p>Convert, edit, and manage your media files</p>
             </div>
             
@@ -917,11 +917,11 @@
         </div>
     </section>
 
-    <!-- WebDeveloper Tools Section -->
+    <!-- Web/Developer Tools Section -->
     <section class="tools-section" id="web-tools">
         <div class="container">
             <div class="section-header">
-                <h2>🌐 WebDeveloper Tools</h2>
+                <h2>🌐 Web/Developer Tools</h2>
                 <p>Essential tools for web developers and designers</p>
             </div>
             
@@ -1212,8 +1212,8 @@
                         <li><a href="#document-tools">PDF Tools</a></li>
                         <li><a href="#image-tools">Image Tools</a></li>
                         <li><a href="#text-tools">Text Tools</a></li>
-                        <li><a href="#audio video-tools">Audio Video Tools</a></li>
-                        <li><a href="#webdeveloper-tools">WebDeveloper Tools</a></li>
+                        <li><a href="#audio-tools">Audio/Video Tools</a></li>
+                        <li><a href="#web/developer-tools">Web/Developer Tools</a></li>
                         <li><a href="#calculator-tools">Calculator Tools</a></li>
                         <li><a href="#utility-tools">Utility Tools</a></li>
                         <li><a href="#color-tools">Color Tools</a></li>
