--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                 <button class="category-btn" data-category="image">Image Tools</button>
                 <button class="category-btn" data-category="text">Text Tools</button>
                 <button class="category-btn" data-category="audio">Audio/Video Tools</button>
-                <button class="category-btn" data-category="web/developer">Web/Developer Tools</button>
+                <button class="category-btn" data-category="web">Web/Developer Tools</button>
                 <button class="category-btn" data-category="calculator">Calculator Tools</button>
                 <button class="category-btn" data-category="utility">Utility Tools</button>
                 <button class="category-btn" data-category="color">Color Tools</button>
