--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@
                         <li><a href="#image-tools">Image Tools</a></li>
                         <li><a href="#text-tools">Text Tools</a></li>
                         <li><a href="#audio-tools">Audio/Video Tools</a></li>
-                        <li><a href="#web/developer-tools">Web/Developer Tools</a></li>
+                        <li><a href="#web-tools">Web/Developer Tools</a></li>
                         <li><a href="#calculator-tools">Calculator Tools</a></li>
                         <li><a href="#utility-tools">Utility Tools</a></li>
                         <li><a href="#color-tools">Color Tools</a></li>
