--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             gap: 20px;
         }
 
-        .contact-email {
+        .email {
             font-size: 14px;
             color: var(--text-light);
         }
@@ -654,7 +654,7 @@
                 </nav>
                 
                 <div class="header-actions">
-                    <div class="contact-email">lollypoppdf@gmail.com</div>
+                    <div class="contact.html">lollypoppdf@gmail.com</div>
                     <button class="theme-toggle" id="themeToggle">
                         <i class="fas fa-moon"></i>
                     </button>
