--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
                     <ul class="footer-links">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#tools">All Tools</a></li>
-                        <li><a href="#contact.html">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="#" id="privacy-link">Privacy Policy</a></li>
                         <li><a href="#" id="disclaimer-link">Disclaimer</a></li>
                         <li><a href="#" id="terms-link">Terms of Service</a></li>
