--- a/contact.html
+++ b/contact.html
@@ -567,7 +567,7 @@
                 <li><a href="https://lollypopdf.com#home" target="_blank">Home</a></li>
                 <li><a href="https://lollypopdf.com#about" target="_blank">About Us</a></li>
                 <li><a href="https://lollypopdf.com#tools" target="_blank">Tools</a></li>
-                <li><a href="https://lollypopdf.com#contact" target="_blank">Contact</a></li>
+                <li><a href="https://lollypopdf.github.io/LollyPoPdf/#contact" target="_blank">Contact</a></li>
             </ul>
             
             <div class="header-right">
