--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                     <li>We don't use tracking cookies or analytics</li>
                     <li>Your data remains completely private and secure</li>
                 </ul>
-                <p>For more details, please contact us at lollypoppdf@gmail.com</p>
+                <p>For more details, please contact at lollypoppdf@gmail.com</p>
             </div>
         </div>
     </div>
