--- a/contact.html
+++ b/contact.html
@@ -567,7 +567,7 @@
                 <li><a href="https://lollypopdf.com#home" target="_blank">Home</a></li>
                 <li><a href="https://lollypopdf.com#about" target="_blank">About Us</a></li>
                 <li><a href="https://lollypopdf.com#tools" target="_blank">Tools</a></li>
-                <li><a href="#contact" target="_blank">Contact</a></li>
+                <li><a href="contact" target="_blank">Contact</a></li>
             </ul>
             
             <div class="header-right">
@@ -677,7 +677,7 @@
                     <ul class="footer-links">
                         <li><a href="https://lollypopdf.com#home" target="_blank">Home</a></li>
                         <li><a href="https://lollypopdf.com#all-tools" target="_blank">All Tools</a></li>
-                        <li><a href="#contact" target="_blank">Contact</a></li>
+                        <li><a href="contact" target="_blank">Contact</a></li>
                         <li><a href="https://lollypopdf.com" target="_blank">Privacy Policy</a></li>
                         <li><a href="https://lollypopdf.com" target="_blank">Disclaimer</a></li>
                         <li><a href="https://lollypopdf.com" target="_blank">Terms of Service</a></li>
