--- a/index.html
+++ b/index.html
@@ -821,11 +821,11 @@
             
             <!-- PDF Tools -->
             <div class="tool-section" id="pdf-tools">
-                <h3 class="section-subtitle" data-translate="pdfTools">📄 PDF Tools</h3>
+                <h3 class="section-subtitle" data-translate="pdfTools">🧰 PDF Tools</h3>
                 <p class="section-description" data-translate="pdfDescription">Powerful tools to manage, convert, and optimize your documents</p>
                 <div class="tools-grid">
                     <div class="tool-card" data-tool-id="pdfCompressor" data-tool-name="PDF Compressor" data-search-keywords="pdf compressor, reduce pdf size, compress pdf">
-                        <div class="tool-icon">📄</div>
+                        <div class="tool-icon">🎛️</div>
                         <h4 class="tool-title" data-translate="pdfCompressor">PDF Compressor</h4>
                         <p class="tool-desc" data-translate="pdfCompressorDesc">Reduce PDF file size while maintaining quality</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
@@ -843,7 +843,7 @@
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfLockUnlock" data-tool-name="PDF Lock/Unlock" data-search-keywords="pdf lock, pdf unlock, password protect pdf">
-                        <div class="tool-icon">🔒</div>
+                        <div class="tool-icon">🔐🗝️</div>
                         <h4 class="tool-title" data-translate="pdfLockUnlock">PDF Lock/Unlock</h4>
                         <p class="tool-desc" data-translate="pdfLockUnlockDesc">Secure your PDF files with passwords</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
