--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
             
             <!-- PDF Tools -->
             <div class="tool-section" id="pdf-tools">
-                <h3 class="section-subtitle" data-translate="pdfTools">🧰 PDF Tools</h3>
+                <h3 class="section-subtitle" data-translate="pdfTools">🧰📄 PDF Tools</h3>
                 <p class="section-description" data-translate="pdfDescription">Powerful tools to manage, convert, and optimize your documents</p>
                 <div class="tools-grid">
                     <div class="tool-card" data-tool-id="pdfCompressor" data-tool-name="PDF Compressor" data-search-keywords="pdf compressor, reduce pdf size, compress pdf">
