--- a/contact.html
+++ b/contact.html
@@ -703,8 +703,8 @@
             <nav id="main-nav">
                 <ul>
                     <li><a href="https://lollypopdf.com#home" id="nav-home">Home</a></li>
-                    <li><a href="https://lollypopdf.com#about" id="nav-about">About Us</a></li>
-                    <li><a href="tools.html" id="nav-tools">Tools</a></li>
+                    <li><a href="#about" id="nav-about">About Us</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" id="nav-tools">Tools</a></li>
                     <li><a href="contact.html" id="nav-contact">Contact</a></li>
                 </ul>
             </nav>
