--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
                     <div class="tool-icon">🗜️</div>
                     <h4 class="tool-title" data-translate="imageCompressor">Image Compressor</h4>
                     <p class="tool-desc" data-translate="imageCompressorDesc">Reduce image file size without losing quality</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image-compressor.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageResizer" data-tool-name="Image Resizer" data-search-keywords="image resizer, resize image, change image size">
                     <div class="tool-icon">📏</div>
