--- a/image-compressor.html
+++ b/image-compressor.html
@@ -652,7 +652,7 @@
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#home">Home</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#about">About Us</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools">Tools</a></li>
-                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#contact">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 
