--- a/contact.html
+++ b/contact.html
@@ -705,7 +705,7 @@
                     <li><a href="https://lollypopdf.com#home" id="nav-home">Home</a></li>
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" id="nav-about">About Us</a></li>
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" id="nav-tools">Tools</a></li>
-                    <li><a href="contact.html" id="nav-contact">Contact</a></li>
+                    <li><a href="contact.html" data-translate="contact">Contact</a></li>
                 </ul>
             </nav>
             
