--- a/contact.html
+++ b/contact.html
@@ -703,7 +703,7 @@
             <nav id="main-nav">
                 <ul>
                     <li><a href="https://lollypopdf.com#home" id="nav-home">Home</a></li>
-                    <li><a href="#about" id="nav-about">About Us</a></li>
+                    <li><a href="#about" data-translate="about">About Us</a></li>
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" id="nav-tools">Tools</a></li>
                     <li><a href="contact.html" data-translate="contact">Contact</a></li>
                 </ul>
