--- a/index.html
+++ b/index.html
@@ -604,21 +604,21 @@
         .language-switcher {
             position: fixed;
             bottom: 10px;
-            right: 20px;
-            z-index: 100;
+            right: 10px;
+            z-index: 1000;
         }
 
         .language-btn {
             background-color: var(--light-blueviolet);
             color: white;
             border: none;
-            border-radius: 50px;
-            padding: 12px 20px;
+            border-radius: 40px;
+            padding: 5px 5px;
             cursor: pointer;
             box-shadow: var(--shadow);
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: 4px;
             font-weight: 600;
             transition: var(--transition);
         }
@@ -917,7 +917,7 @@
                     <div class="tool-icon">🔄</div>
                     <h4 class="tool-title" data-translate="imageConverter">Image Converter</h4>
                     <p class="tool-desc" data-translate="imageConverterDesc">Convert images between different formats</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image-converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageCompressor" data-tool-name="Image Compressor" data-search-keywords="image compressor, compress image, reduce image size">
                     <div class="tool-icon">🗜️</div>
