--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                     <div class="tool-icon">📏</div>
                     <h4 class="tool-title" data-translate="imageResizer">Image Resizer</h4>
                     <p class="tool-desc" data-translate="imageResizerDesc">Resize images to specific dimensions</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image-resizer.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageCropper" data-tool-name="Image Cropper" data-search-keywords="image cropper, crop image, cut image">
                     <div class="tool-icon">✂️</div>
