--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                     <div class="tool-icon">✂️</div>
                     <h4 class="tool-title" data-translate="imageCropper">Image Cropper</h4>
                     <p class="tool-desc" data-translate="imageCropperDesc">Crop images to remove unwanted areas</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image-cropper.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageToText" data-tool-name="Image to Text (OCR)" data-search-keywords="image to text, ocr, extract text from image">
                     <div class="tool-icon">🔤</div>
