--- a/image-cropper.html
+++ b/image-cropper.html
@@ -1117,7 +1117,7 @@
                     <li><a href="https://lollypopdf.com#image-tools" data-i18n="footer.categories.image">Image Tools</a></li>
                     <li><a href="https://lollypopdf.com#text-tools" data-i18n="footer.categories.text">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com#audio-video-tools" data-i18n="footer.categories.av">Audio/Video Tools</a></li>
-                    <li><a href="https://lollypopdf.com#web-developer-tools" data-i18n="footer.categories.web">Web/Developer Tools</a></li>
+                    <li><a href="https://lollypopdf.com#web-developer-tools" data-i18n="footer.categories.web">WebDeveloper Tools</a></li>
                     <li><a href="https://lollypopdf.com#calculator-tools" data-i18n="footer.categories.calc">Calculator Tools</a></li>
                     <li><a href="https://lollypopdf.com#utility-tools" data-i18n="footer.categories.util">Utility Tools</a></li>
                     <li><a href="https://lollypopdf.com#color-tools" data-i18n="footer.categories.color">Color Tools</a></li>
@@ -1128,8 +1128,8 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.quicklinks">Quick Links</h4>
                 <ul class="footer-links">
-                    <li><a href="https://lollypopdf.com#home" data-i18n="nav.home">Home</a></li>
-                    <li><a href="tools.html" data-i18n="footer.links.tools">All Tools</a></li>
+                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#home" data-i18n="nav.home">Home</a></li>
+                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#tools.html" data-i18n="footer.links.tools">All Tools</a></li>
                     <li><a href="faq.html" data-i18n="footer.links.faq">FAQ</a></li>
                     <li><a href="contact.html" data-i18n="footer.links.contact">Contact</a></li>
                     <li><a href="privacy-policy.html" data-i18n="footer.links.privacy">Privacy Policy</a></li>
