--- a/image-cropper.html
+++ b/image-cropper.html
@@ -922,9 +922,9 @@
             
             <nav>
                 <ul>
-                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#home" class="nav-link" data-i18n="nav.home">Home</a></li>
-                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#about" class="nav-link" data-i18n="nav.about">About Us</a></li>
-                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#tools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" class="nav-link" data-i18n="nav.home">Home</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" class="nav-link" data-i18n="nav.about">About Us</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
                     <li><a href="contact.html" class="nav-link" data-i18n="nav.contact">Contact</a></li>
                 </ul>
             </nav>
@@ -943,10 +943,10 @@
         <!-- Mobile Menu -->
         <div class="mobile-menu" id="mobileMenu">
             <ul>
-                <li><a href="https://lollypopdf.com#home" class="nav-link" data-i18n="nav.home">Home</a></li>
-                <li><a href="https://lollypopdf.com#about" class="nav-link" data-i18n="nav.about">About Us</a></li>
-                <li><a href="https://lollypopdf.com#tools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
-                <li><a href="https://lollypopdf.com#contact" class="nav-link" data-i18n="nav.contact">Contact</a></li>
+                <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" class="nav-link" data-i18n="nav.home">Home</a></li>
+                <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" class="nav-link" data-i18n="nav.about">About Us</a></li>
+                <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
+                <li><a href="contact.html" class="nav-link" data-i18n="nav.contact">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -1128,8 +1128,8 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.quicklinks">Quick Links</h4>
                 <ul class="footer-links">
-                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#home" data-i18n="nav.home">Home</a></li>
-                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#tools.html" data-i18n="footer.links.tools">All Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" data-i18n="nav.home">Home</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools.html" data-i18n="footer.links.tools">All Tools</a></li>
                     <li><a href="faq.html" data-i18n="footer.links.faq">FAQ</a></li>
                     <li><a href="contact.html" data-i18n="footer.links.contact">Contact</a></li>
                     <li><a href="privacy-policy.html" data-i18n="footer.links.privacy">Privacy Policy</a></li>
