--- a/image-compressor.html
+++ b/image-compressor.html
@@ -796,9 +796,9 @@
                 
                 <nav>
                     <ul id="navMenu">
-                        <li><a href="https://lollypopdf.com#home" class="nav-link" data-key="home">Home</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" class="nav-link" data-key="home">Home</a></li>
                         <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" class="nav-link" data-key="about">About Us</a></li>
-                        <li><a href="https://lollypopdf.com#tools" class="nav-link" data-key="tools">Tools</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" class="nav-link" data-key="tools">Tools</a></li>
                         <li><a href="contact.html" class="nav-link" data-key="contact">Contact</a></li>
                     </ul>
                 </nav>
